--- a/src/stories/components/BaseButton.stories.mdx
+++ b/src/stories/components/BaseButton.stories.mdx
@@ -1,8 +1,8 @@
 import { Meta, Props, Story, Preview } from '@storybook/addon-docs/blocks';
 import { action } from "@storybook/addon-actions";
+import { withKnobs, object, boolean, text, select } from '@storybook/addon-knobs';
+import { withInfo } from 'storybook-addon-vue-info'
 import BaseButton from '../../components/BaseButton.vue';
-
-import '../../assets/tailwind.css';
 
 <Meta title="Components|Button" component={BaseButton} />
 
@@ -22,25 +22,50 @@ Todo list
 
 <Props of={BaseButton} />
 
+# Defaults
+
 This is a simple button with some text in it.
 
 <Preview>
   <Story name="Defaults">
     {{
-        components: { BaseButton },
-        template: '<base-button @click="action">Hello Button</base-button>',
+      components: {
+        BaseButton
+      },
+      template: `
+        <div class="py-16 flex justify-center">
+          <BaseButton @click="action">Hello Button</BaseButton>
+        </div>`,
         methods: { action: action("clicked") }
     }}
   </Story>
 </Preview>
 
-You can even have Emoji in the button.
+# Primary, large
+
+This is a button modified using the Colour and Variant props.
 
 <Preview>
-  <Story name="Primary, large">
+  <Story name="Primary, large" decorators={[withKnobs()]}>
     {{
-        components: { BaseButton },
-        template: '<base-button colour="primary" variant="large">Bigger, amazing</base-button>'
+      components: {
+        BaseButton
+      },
+      props: {
+        colour: {
+          default: select('Colour', ['primary', 'secondary'], 'primary')
+        },
+        variant: {
+          default: select('Variant', ['large', 'small', 'round'], 'large')
+        }
+      },
+      template: `
+        <div class="py-16 flex justify-center">
+          <base-button :colour="colour" :variant="variant">
+            Bigger, amazing
+          </base-button>
+        </div>`,
+        methods: { action: action("clicked") }
     }}
   </Story>
 </Preview>
