--- a/src/stories/components/BaseAlert.stories.mdx
+++ b/src/stories/components/BaseAlert.stories.mdx
@@ -1,10 +1,9 @@
 import { Meta, Props, Story, Preview } from '@storybook/addon-docs/blocks';
 import { action } from "@storybook/addon-actions";
 import { text, select } from '@storybook/addon-knobs';
-import { withInfo } from 'storybook-addon-vue-info'
 import BaseAlert from '../../components/BaseAlert.vue';
 
-<Meta title="Components|Alert" component={BaseAlert} />
+<Meta title="Components/Alert" component={BaseAlert} />
 
 # Alert
 
@@ -36,8 +35,8 @@ import BaseAlert from '../../components/BaseAlert.vue';
           default: text('Text to Alert', 'An alert!'),
         },
         tagText: {
-          default: text('Test within tag', 'Yay')
-        }
+          default: text('Text within tag', 'Yay')
+        },
       },
       template: `
         <div class="mx-auto max-w-lg pt-6">
@@ -53,7 +52,7 @@ import BaseAlert from '../../components/BaseAlert.vue';
   </Story>
 </Preview>
 
-# Variants:
+# Variants
 
 <Preview>
   <Story name="Variants">
@@ -84,7 +83,7 @@ import BaseAlert from '../../components/BaseAlert.vue';
         }
       },
       template: `
-        <div class="mx-auto max-w-lg">
+        <div class="mx-auto max-w-lg pt-6">
           <BaseAlert
             v-for="variant in variants"
             v-if="!isClosed(variant)"
@@ -124,7 +123,7 @@ import BaseAlert from '../../components/BaseAlert.vue';
           default: select('Variant', ['default', 'success', 'error', 'warning', 'info']),
         },
         tagText: {
-          default: text('Test within tag', 'Yay')
+          default: text('Text within tag', 'Yay')
         }
       },
       template: `
