--- a/src/stories/components/BaseBreadCrumbs.stories.mdx
+++ b/src/stories/components/BaseBreadCrumbs.stories.mdx
@@ -1,6 +1,7 @@
 import { Meta, Props, Story, Preview } from '@storybook/addon-docs/blocks';
 import { withInfo } from 'storybook-addon-vue-info';
 import BaseBreadcrumbs from '../../components/BaseBreadcrumbs.vue';
+import StoryRouter from 'storybook-vue-router';
 
 <Meta title="Components/BaseBreadcrumbs" component={BaseBreadcrumbs} />
 
@@ -13,7 +14,27 @@ import BaseBreadcrumbs from '../../components/BaseBreadcrumbs.vue';
 Set to iterate breadcrumbs based on `this.$route.matched`; works well with  a global `vue-router` installation.
 
 <Preview>
-  <Story name="Default">
+  <Story name="Default" decorators={[StoryRouter({}, {
+    initialEntry: "/settings/developers",
+    routes: [
+      {
+        path: '/',
+        meta: { breadcrumb: 'Dashboard'},
+        children: [
+          {
+            path: '/settings',
+            meta: { breadcrumb: 'Settings' },
+            children: [
+              {
+                path: 'developers',
+                meta: {breadcrumb: 'Developers'}
+              }
+            ]
+          }
+        ]
+      },
+    ]
+  })]}>
     {{
       components: {
         BaseBreadcrumbs
