--- a/src/stories/components/BaseDropdown.stories.mdx
+++ b/src/stories/components/BaseDropdown.stories.mdx
@@ -19,7 +19,7 @@ import StoryRouter from 'storybook-vue-router';
       },
       template: `
         <div class="p-16 flex justify-center">
-          <BaseDropdown class="max-w-md" :options="['Option 1', 'Option 2']"/>
+          <BaseDropdown class="max-w-sm" :options="['Option 1', 'Option 2']"/>
         </div>`
     }}
   </Story>
