--- a/src/stories/components/BaseDropdown.stories.mdx
+++ b/src/stories/components/BaseDropdown.stories.mdx
@@ -1,5 +1,6 @@
 import { Meta, Props, Story, Preview } from '@storybook/addon-docs/blocks';
 import { withInfo } from 'storybook-addon-vue-info';
+import { action } from '@storybook/addon-actions';
 import BaseDropdown from '../../components/BaseDropdown.vue';
 import StoryRouter from 'storybook-vue-router';
 
@@ -17,9 +18,12 @@ import StoryRouter from 'storybook-vue-router';
       components: {
         BaseDropdown
       },
+      methods: {
+        onOptionSelect: action('option-selected'),
+      },
       template: `
         <div class="p-16 flex justify-center">
-          <BaseDropdown class="max-w-2xl" :options="[['optionKey', 'Option Value']]"/>
+          <BaseDropdown class="max-w-2xl" @option-selected="onOptionSelect" :options="[['optionKey', 'Option Value'], ['optionKey2', 'Option Value 2']]"/>
         </div>`
     }}
   </Story>
