--- a/src/stories/components/BaseDropdown.stories.mdx
+++ b/src/stories/components/BaseDropdown.stories.mdx
@@ -1,8 +1,6 @@
 import { Meta, Props, Story, Preview } from '@storybook/addon-docs/blocks';
-import { withInfo } from 'storybook-addon-vue-info';
 import { action } from '@storybook/addon-actions';
 import BaseDropdown from '../../components/BaseDropdown.vue';
-import StoryRouter from 'storybook-vue-router';
 
 <Meta title="Components/BaseDropdown" component={BaseDropdown} />
 
@@ -22,7 +20,7 @@ import StoryRouter from 'storybook-vue-router';
         onOptionSelect: action('option-selected'),
       },
       template: `
-        <div class="p-16 flex justify-center">
+        <div class="p-16 flex justify-center w-full bg-gray-100">
           <BaseDropdown class="max-w-2xl" @option-selected="onOptionSelect" :options="[['optionKey', 'Option Value'], ['optionKey2', 'Option Value 2']]"/>
         </div>`
     }}
