disable BaseDropdownOption within BaseDropdown when value is default/empty

--- a/src/stories/components/BaseDropdown.stories.mdx
+++ b/src/stories/components/BaseDropdown.stories.mdx
@@ -21,7 +21,7 @@ import BaseDropdownOption from '../../components/BaseDropdownOption.vue';
       data() {
         return {
           option: "",
-          options: [{value: 'optionKey1', label: 'Option Value 3'}, {value: 'optionKey2', label: 'Option Value 2'}],
+          options: [{value: '', label: 'Select an option'}, { value: 'optionKey1', label: 'Option Value 3'}, {value: 'optionKey2', label: 'Option Value 2'}],
         }
       },
       methods: {
