make Popover actuall popover

--- a/src/stories/components/BasePopover.stories.mdx
+++ b/src/stories/components/BasePopover.stories.mdx
@@ -19,7 +19,7 @@ import BaseOption from '../../components/BaseOption.vue';
         BaseOption,
       },
       template: `
-        <div class="w-full mx-auto max-w-md p-10">
+        <div class="relative w-full mx-auto max-w-lg m-10">
           <div class="rounded-sm bg-gray-300 h-10 w-10 shadow-lg ml-auto"></div>
           <BasePopover>
             <BaseOption
