add baseOptionClass string prop to apply as class to dropdown's inner options

--- a/src/stories/components/BaseDropdown.stories.mdx
+++ b/src/stories/components/BaseDropdown.stories.mdx
@@ -92,6 +92,7 @@ const defaultOptions = [
             placeholder="Example Dropdown Placeholder"
             v-model="option"
             :options="options"
+            baseOptionClass="text-left"
             />
             <div>Some more content</div>
         </div>`
