--- a/src/stories/components/BasePopover.stories.mdx
+++ b/src/stories/components/BasePopover.stories.mdx
@@ -27,13 +27,13 @@ import BaseOption from '../../components/BaseOption.vue';
               :value="value"
               disabled
             >
-              Options
+              Disabled
             </BaseOption>
             <BaseOption
               :key="i"
               :value="value"
             >
-              Disable
+              Option
             </BaseOption>
             <BaseOption
               :key="i"
