added tailwind styles, implement shadow changes

--- a/src/stories/components/RadioButton.stories.mdx
+++ b/src/stories/components/RadioButton.stories.mdx
@@ -120,7 +120,7 @@ import RadioButton from '../../components/RadioButton.vue';
             :disabled="disabled"
             :required="required"
             v-model="checked"
-          />
+          >Test</RadioButton>
           <RadioButton
             label="Option 2"
             :name="name"
