--- a/src/stories/components/BaseDropdown.stories.mdx
+++ b/src/stories/components/BaseDropdown.stories.mdx
@@ -3,9 +3,10 @@ import { action } from '@storybook/addon-actions';
 import BaseDropdown from '../../components/BaseDropdown.vue';
 import BaseOption from '../../components/BaseOption.vue';
 const defaultOptions = [
-  { value: '', label: 'Select an option' },
-  { value: 'optionKey1', label: 'Option Value 2' },
-  { value: 'optionKey2', label: 'Option Value 3' }
+  { value: '', label: 'Select a Ticket', disabled: true },
+  { value: 't3', label: 'T3 Ticket' },
+  { value: 't2', label: 'T2 Ticket' },
+  { value: 't1', label: 'T1 Ticket (Coming Soon)', disabled: true }
 ];
 
 <Meta title="Components/BaseDropdown" component={BaseDropdown} />
@@ -21,7 +22,6 @@ const defaultOptions = [
     {{
       components: {
         BaseDropdown,
-        BaseOption,
       },
       data() {
         return {
@@ -32,35 +32,8 @@ const defaultOptions = [
       template: `
         <div class="p-16 flex justify-center w-full bg-gray-100">
           <BaseDropdown
+            name="example-1"
             class="max-w-md"
-            v-model="option"
-            :options="options"
-            />
-        </div>`
-    }}
-  </Story>
-</Preview>
-
-# With Placeholder:
-
-<Preview>
-  <Story name="With Placeholder">
-    {{
-      components: {
-        BaseDropdown,
-        BaseOption,
-      },
-      data() {
-        return {
-          option: "",
-          options: defaultOptions,
-        }
-      },
-      template: `
-        <div class="p-16 flex justify-center w-full bg-gray-100">
-          <BaseDropdown
-            class="max-w-md"
-            placeholder="Example Dropdown Placeholder"
             v-model="option"
             :options="options"
             />
@@ -76,7 +49,6 @@ const defaultOptions = [
     {{
       components: {
         BaseDropdown,
-        BaseOption,
       },
       data() {
         return {
@@ -88,6 +60,7 @@ const defaultOptions = [
         <div class="p-16 bg-gray-100 text-center">
           <div>Some content</div>
           <BaseDropdown
+            name="example-3"
             class="max-w-md mx-auto"
             placeholder="Example Dropdown Placeholder"
             v-model="option"
