--- a/src/stories/components/RadioButton.stories.mdx
+++ b/src/stories/components/RadioButton.stories.mdx
@@ -6,13 +6,14 @@ import RadioButton from '../../components/RadioButton.vue';
 
 <Meta title="Form fields/Radio button" component={ RadioButton } />
 
-<Props of={RadioButton} />
+# Show props table
 
+<Props of={RadioButton} />
 
 # Radio button group
 
 <Preview>
-  <Story name="radio group">
+  <Story name="Radio group">
     {{
     components: {
         RadioButton
@@ -40,7 +41,7 @@ import RadioButton from '../../components/RadioButton.vue';
             :disabled="disabled"
             :required="required"
             v-model="checked"
-          >Test</RadioButton>
+          />
           <RadioButton
             :label="label"
             :name="name"
@@ -48,7 +49,7 @@ import RadioButton from '../../components/RadioButton.vue';
             :disabled="disabled"
             :required="required"
             v-model="checked"
-          >Test</RadioButton>
+          />
           <RadioButton
             label="Option 2"
             :name="name"
