--- a/src/stories/components/BaseDropdown.stories.mdx
+++ b/src/stories/components/BaseDropdown.stories.mdx
@@ -8,6 +8,22 @@ const defaultOptions = [
   { value: 't2', label: 'T2 Ticket' },
   { value: 't1', label: 'T1 Ticket (Coming Soon)', disabled: true }
 ];
+const defaultSelectOptions = [
+  {
+    checked: true,
+    value: 'meats',
+    label: 'Meat',
+    group: [
+      { checked: false, value: 'steak', label: 'Steak (Sold Out)', disabled: true },
+      { checked: false, value: 'chicken', label: 'Chicken' },
+      { checked: false, value: 'fish', label: 'Fish' },
+    ],
+  },
+  { checked: true, value: 'apple', label: 'Apple' },
+  { checked: false, value: 'pear', label: 'Pear' },
+  { checked: false, value: 'kiwi', label: 'Kiwis' },
+  { checked: false, value: 'blueberry', label: 'Blueberries' }
+];
 
 <Meta title="Components/BaseDropdown" component={BaseDropdown} />
 
@@ -68,6 +84,39 @@ const defaultOptions = [
             baseOptionClass="text-left"
             />
             <div>Some more content</div>
+        </div>`
+    }}
+  </Story>
+</Preview>
+
+# As multi-select:
+
+<Preview>
+  <Story name="As multi-select">
+    {{
+      components: {
+        BaseDropdown,
+      },
+      data() {
+        return {
+          options: defaultSelectOptions,
+        }
+      },
+      template: `
+        <div class="my-8 p-16 bg-gray-100 text-center">
+          {{
+            JSON.stringify(options)
+          }}
+          <div>Some content</div>
+          <BaseDropdown
+            name="example-4"
+            class="max-w-md mx-auto"
+            placeholder="Example Dropdown Placeholder"
+            v-model="options"
+            :multiselect="true"
+            baseOptionClass="text-left"
+            />
+            <div>Select</div>
         </div>`
     }}
   </Story>
