--- a/src/stories/components/TextField.stories.mdx
+++ b/src/stories/components/TextField.stories.mdx
@@ -19,6 +19,17 @@ import TextField from '../../components/TextField.vue';
         inputValue: {
           default: text('Input Value', 'Text Field')
         },
+        errored: {
+          default: boolean('Errored', false)
+        },
+        disabled: {
+          default: boolean('Disabled', false)
+        },
+      },
+      computed: {
+        variant() {
+          return this.disabled ? 'disabled' : this.errored ? 'error' : '';
+        }
       },
       components: {
         TextField
@@ -28,6 +39,7 @@ import TextField from '../../components/TextField.vue';
           <TextField
             placeholder="Text Field Placeholder"
             v-model="inputValue"
+            :variant="variant"
           />
         </div>`,
     }}
