added todo list in icon story

--- a/src/stories/components/Icon.stories.mdx
+++ b/src/stories/components/Icon.stories.mdx
@@ -6,11 +6,21 @@ import Icon from '../../components/Icon.vue';
 
 <Meta title="Components/Icon" component={Icon} />
 
+<details>
+<summary>
+Todo list
+</summary>
+
+- Implement custom size attribute 12px & 16px
+- Change Icon component name to ChecIcon
+
+</details>
+
 # Icon
 
 <Props of={ Icon } />
 
-# Basic Icons
+## Basic Icons
 
 <Preview>
   <Story name="Basic">
